# rinda-callops

./: .gitignore  CONTRIBUTING.md  FIREBASE_SETUP.md  LICENSE  README.md
rinda-callops/: .env.example  .firebaserc  .gitignore  README.md  firebase.config.template.ts  firestore.indexes.json  firestore.rules  package-lock.json  package.json
rinda-callops/scripts/: cleanup-agents.js  create-demo-accounts.js  generate-api-client.js  generate-api-client.ts
rinda-callops/src/app/: layout.tsx  page.tsx
rinda-callops/src/app/dashboard/: page.tsx
rinda-callops/src/app/login/: page.tsx
rinda-callops/src/app/onboarding/: page.tsx
rinda-callops/src/components/auth/: EnhancedLoginPage.tsx
rinda-callops/src/contexts/: AuthContext.tsx
rinda-callops/src/hooks/: useAuthenticatedApi.ts
rinda-callops/src/lib/: api.ts
rinda-callops/src/services/: tool-generator.ts
rinda-callops/src/stores/: auth-store.ts
rinda-callops/src/types/: models.ts
server/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
server/scripts/: download_models.py
server/src/: dependencies.py  main.py
server/src/agents/: custom_tts.py  phone_agent.py
server/src/api/: __init__.py  agents.py  calls.py  dispatch.py  files.py  test.py  tools.py  webhooks.py
server/src/core/: config.py  voice_config.py
server/src/models/: __init__.py  agent.py  call.py  tool.py
server/src/services/: __init__.py  agent_worker.py  database.py  file_analyzer.py  google_sheets_service.py  livekit_service.py  tool_executor.py  tool_generator.py
server/src/utils/: text_processor.py
(+81 files in other folders)
